--- a/index.html
+++ b/index.html
@@ -7,5 +7,19 @@
   </head>
   <body>
 
+    <header>
+      <div class="logo">
+        <img src="Resources/Images/img-tea-cozy-logo.png" alt="logo">
+      </div>
+      <nav>
+        <span> <a href="#">Mission</a> </span>
+        <span> <a href="#">Featured Tea</a> </span>
+        <span> <a href="#">Locations</a> </span>
+      </nav>
+    </header>
+
+
+
+
   </body>
 </html>
