--- a/index.html
+++ b/index.html
@@ -18,8 +18,26 @@
       </nav>
     </header>
 
+<!-- Main Content-->
+
+    <div class="content">
+
+      <!-- Mision Section -->
+      <div class="mission">
+        <div class="text-content">
+          <h2>Our Mission</h2>
+          <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
+        </div>
+      </div>
+
+      <!-- Featured Tea -->
+
+      <!-- Locations-->
 
 
 
+<!-- Footer-->
+
+    </div>
   </body>
 </html>
