--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   </head>
   <body>
 
+<!-- Header -->
+
     <header>
       <div class="logo">
         <img src="Resources/Images/img-tea-cozy-logo.png" alt="logo">
@@ -31,7 +33,37 @@
       </div>
 
       <!-- Featured Tea -->
+      <div class="featured-tea">
+        <h2>Tea of the Month</h2>
+        <h4>What's Steeping at The Tea Cozy?</h4>
+        <div class="tea-types">
 
+          <div class="image">
+            <img src="Resources/Images/img-berryblitz.jpg" alt="Fall Berry Blitz Tea">
+            <h4>Fall Berry Blitz Tea</h4>
+          </div>
+
+          <div class="image">
+            <img src="Resources/Images/img-spiced-rum.jpg" alt="Spiced Rum Tea">
+            <h4>Spiced Rum Tea</h4>
+          </div>
+
+          <div class="image">
+            <img src="Resources/Images/img-donut.jpg" alt="Donut">
+            <h4>Seasonal Donuts</h4>
+          </div>
+
+          <div class="image">
+            <img src="Resources/Images/img-myrtle-ave.jpg" alt="Myrtle Ave">
+            <h4>Myrtle Ave Tea</h4>
+          </div>
+
+          <div class="image">
+            <img src="Resources/Images/img-bedford-bizarre.jpg" alt="Bizarre Tea">
+            <h4>Bedford Bizarre Tea</h4>
+          </div>
+        </div>
+      </div>
       <!-- Locations-->
 
 
