Updated Featured Tea Section

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
         <img src="Resources/Images/img-tea-cozy-logo.png" alt="logo">
       </div>
       <nav>
-        <span> <a href="#">Mission</a> </span>
-        <span> <a href="#">Featured Tea</a> </span>
+        <span> <a href="#mission">Mission</a> </span>
+        <span> <a href="#featured-tea">Featured Tea</a> </span>
         <span> <a href="#">Locations</a> </span>
       </nav>
     </header>
@@ -25,7 +25,7 @@
     <div class="content">
 
       <!-- Mision Section -->
-      <div class="mission">
+      <div id="mission">
         <div class="text-content">
           <h2>Our Mission</h2>
           <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
@@ -33,7 +33,7 @@
       </div>
 
       <!-- Featured Tea -->
-      <div class="featured-tea">
+      <div id="featured-tea">
         <h2>Tea of the Month</h2>
         <h4>What's Steeping at The Tea Cozy?</h4>
         <div class="tea-types">
