--- a/index.html
+++ b/index.html
@@ -64,12 +64,39 @@
           </div>
         </div>
       </div>
+
+
       <!-- Locations-->
+      <div id="locations">
+          <h2>Locations</h2>
+         <div class="location_info">
+            <div class="location">
+              <h3>Downtown</h3>
+              <h5>384 West 4th St</h5>
+              <h5>Suite 108</h5>
+              <h5>Portland, Maine</h5>
+            </div>
 
+            <div class="location">
+              <h3>East Bayside</h3>
+              <h5>3433 Phisherman's Avenue</h5>
+              <h5>(Northwest Corner)</h5>
+              <h5>Portland, Maine</h5>
+            </div>
 
+            <div class="location">
+              <h3>Oakdale</h3>
+              <h5>515 Crescent Avenue</h5>
+              <h5>Second Floor</h5>
+              <h5>Portland, Maine</h5>
+            </div>
+          </div>
+      </div>
+    </div>
 
 <!-- Footer-->
 
-    </div>
+
+
   </body>
 </html>
