--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <nav>
         <span> <a href="#mission">Mission</a> </span>
         <span> <a href="#featured-tea">Featured Tea</a> </span>
-        <span> <a href="#">Locations</a> </span>
+        <span> <a href="#locations">Locations</a> </span>
       </nav>
     </header>
 
@@ -96,7 +96,16 @@
 
 <!-- Footer-->
 
+    <footer>
+      <div class="info">
+        <h2>The Tea Cozy</h2>
+        <h5>contact@theteacozy.com</h5>
+        <h5>917-555-8904</h5>
+      </div>
 
-
+      <div class="copyright">
+        <h6>copyright The Tea Cozy 2017</h6>
+      </div>
+    </footer>
   </body>
 </html>
